--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1199,101 +1199,81 @@ A total of 4 participants completed the stage 2.2 evaluation;
 
 %=========================================================================================================
 
+\subsection{Likert-type Questionnaires}
 
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=.6\textwidth]{2.2/9-item-likert-type-questionnaire.png}
+	\caption{Likert-type questionnaire results for stage 2.2.}
+	\label{9-item-likert-type-questionnaire.png}
+	\end{center}
+\end{figure}
 
+When considering the responses to the Likert-type questionnaires (see figure \ref{9-item-likert-type-questionnaire.png}) for the two PR scenarios of the stage 2.2 evaluation, the following observations can be made.
 
-
-
+\begin{itemize}
+	\item Participants overall preferred the 75/25 scenario over the 50/50 scenario (q1)
+	\item Participants found it easier to compare features from past \& present in the 50/50 scenario than the 75/25 scenario (q3)
+	\item Participants experienced more motion sickness in the 75/25 scenario than in the 50/50 scenario (q5)
+	\item The 50/50 scenario was reported as being less rewarding for exploring the chapel than the 75/25 scenario (q6)
+	\item Participants thought that they did not notice differences between real \& virtual more in the 75/25 scenario than in the 50/50 scenario (q9)
+\end{itemize}
 
 %=========================================================================================================
 
-\clearpage
+\subsection{Interview Transcripts}
+
+Once again, the interview recordings that were transcribed after the chapel sessions gave valuable insight into the experience of the two PR scenarios in stage 2.2.
+
+Two participants said that they preferred the 75/25 scenario, while the other two participants preferred the 50/50 scenario. Of those that preferred the 75/25 scenario, one explained that s/he felt more in control of whether s/he was seeing real or virtual while the other found the more obvious sudden VR movements visible during the 50/50 scenario to be uncomfortable. Of those that preferred the 50/50 scenario one reported that of the 75/25 scenario that it was \textit{``confusing to make sense of what I was seeing''} while the other found that switching to fully VR was less of a jump coming from 50/50 \& was thus \textit{``more comfortable spending more time in the virtual''}.
+
+All of the participants however reported that the 50/50 scenario was more engaging. Interestingly, one of the participants who reported preferring the 75/25 scenario largely because of inaccuracy of the IPS during the 50/50 scenario to cause disorientation, commented that this inaccuracy led to greater engagement because it would show him/her other parts of the VR chapel than were equivalent to his/her immediate surroundings. Two participants further reported that the 50/50 scenario made differences between RW \& VR more obvious, with one reporting not much discernible difference. One participant specially mentioned how the 50/50 scenario made it more \textit{``perceptible exactly where things were''} which led to seeing him/herself \textit{``walking through''} (virtual) things whereas with the 75/25 scenario s/he would have to \textit{``switch back \& forth \& then realise''}. One participant directly answered that they thought they used the button to manually transition more in the 50/50 scenario because it was less jarring than in the 75/25 scenario.
+
+Mimicking responses from earlier stage interviews, one participant reported experiencing motion sickness during the traditional scenario when using the Xbox controller stick to turn, while when considering the PR scenarios three of the four participants reported less motion sickness during the 50/50 scenario.
+
+%=========================================================================================================
+
+\subsection{Log Data}
+
+Once again, variance in yaw dominated during all three scenarios (traditional \& both PR scenarios) over variance in pitch, which is illustrated in figure \ref{14-pitch-yaw-trad-75-25-50-50.png} which shows pitch \& yaw against time for participant 14 for the traditional scenario at left, the 75/25 scenario in the middle \& the 50/50 scenario on the right.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/16-pitch-yaw-75-25.png}
+	\caption{Pitch \& yaw against time for participant 14 in traditional \& both PR scenarios.}
+	\label{16-pitch-yaw-75-25.png}
+	\end{center}
+\end{figure}
+
+%=====================
+
+\subsubsection{Comparing Between 75/25 \& 50/50 Scenario}
+
+The main observations when comparing log data for the two PR scenarios are that all of the participants performed fewer transitions in the 50/50 scenario than in the 75/25 scenario, with three of the participants also spending more time (both overall \& in terms of the average duration of the periods) perceiving the default position rather than VR. Figures \ref{16-pitch-yaw-50-50.png} \& \ref{16-pitch-yaw-50-50.png} visualise this relationship for participant 16 performing the 75/25 scenario \& 50/50 scenario respectively.
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/14-pitch-yaw-trad-75-25-50-50.png}
+	\caption{Pitch \& yaw against time for participant 16 in 75/25 scenario, showing RW/VR transitions.}
+	\label{16-pitch-yaw-50-50.png}
+	\end{center}
+\end{figure}
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/16-pitch-yaw-50-50.png}
+	\caption{Pitch \& yaw against time for participant 16 in 50/50 scenario, showing RW/VR transitions.}
+	\label{16-pitch-yaw-50-50.png}
+	\end{center}
+\end{figure}
+
+%=========================================================================================================
+
+\subsection{IPQ}
+
+%=========================================================================================================
 
 \subsection{Conclusions}
-
-\subsubsection{Participant 14}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/14_75_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/14_50_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 15}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/15_75_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/15_50_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 16}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/16_75_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/16_50_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsubsection{Participant 17}
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/17_75_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
-
-\clearpage
-
-\begin{figure}[h]
-	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/17_50_2up.png}
-	\caption{Some images, yah.}
-	\end{center}
-\end{figure}
 
 %=========================================================================================================
 
