Stage 2.2 stats tables (using booktabs now).

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1235,13 +1235,13 @@ Mimicking responses from earlier stage interviews, one participant reported expe
 
 \subsection{Log Data}
 
-Once again, variance in yaw dominated during all three scenarios (traditional \& both PR scenarios) over variance in pitch, which is illustrated in figure \ref{14-pitch-yaw-trad-75-25-50-50.png} which shows pitch \& yaw against time for participant 14 for the traditional scenario at left, the 75/25 scenario in the middle \& the 50/50 scenario on the right.
+Once again, variance in yaw dominated during all three scenarios (traditional \& both PR scenarios) over variance in pitch, which is illustrated in figure \ref{14-pitch-yaw-trad-75-25-50-50.png} which shows pitch \& yaw against time for participant 14 for the traditional scenario at left, the 75/25 scenario in the middle \& the 50/50 scenario on the right (note that the 75/25 scenario is of substantially longer duration than the other two scenarios, thus the marked difference in initial appearance).
 
 \begin{figure}[h]
 	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/16-pitch-yaw-75-25.png}
+	\includegraphics[width=\textwidth]{2.2/14-pitch-yaw-trad-75-25-50-50.png}
 	\caption{Pitch \& yaw against time for participant 14 in traditional \& both PR scenarios.}
-	\label{16-pitch-yaw-75-25.png}
+	\label{14-pitch-yaw-trad-75-25-50-50.png}
 	\end{center}
 \end{figure}
 
@@ -1249,13 +1249,13 @@ Once again, variance in yaw dominated during all three scenarios (traditional \&
 
 \subsubsection{Comparing Between 75/25 \& 50/50 Scenario}
 
-The main observations when comparing log data for the two PR scenarios are that all of the participants performed fewer transitions in the 50/50 scenario than in the 75/25 scenario, with three of the participants also spending more time (both overall \& in terms of the average duration of the periods) perceiving the default position rather than VR. Figures \ref{16-pitch-yaw-50-50.png} \& \ref{16-pitch-yaw-50-50.png} visualise this relationship for participant 16 performing the 75/25 scenario \& 50/50 scenario respectively.
+The main observations when comparing log data for the two PR scenarios are that all of the participants performed fewer transitions in the 50/50 scenario than in the 75/25 scenario, with three of the participants also spending more time (both overall \& in terms of the average duration of the periods) perceiving the default position rather than VR. Figures \ref{16-pitch-yaw-75-25.png} \& \ref{16-pitch-yaw-50-50.png} visualise this relationship for participant 16 performing the 75/25 scenario \& 50/50 scenario respectively.
 
 \begin{figure}[h]
 	\begin{center}
-	\includegraphics[width=\textwidth]{2.2/14-pitch-yaw-trad-75-25-50-50.png}
+	\includegraphics[width=\textwidth]{2.2/16-pitch-yaw-75-25.png}
 	\caption{Pitch \& yaw against time for participant 16 in 75/25 scenario, showing RW/VR transitions.}
-	\label{16-pitch-yaw-50-50.png}
+	\label{16-pitch-yaw-75-25.png}
 	\end{center}
 \end{figure}
 
@@ -1266,6 +1266,72 @@ The main observations when comparing log data for the two PR scenarios are that 
 	\label{16-pitch-yaw-50-50.png}
 	\end{center}
 \end{figure}
+
+
+
+
+
+
+
+\begin{table}
+\begin{center}
+\begin{tabularx}{\textwidth}{c *{6}{>{\centering\arraybackslash}X}}
+\toprule
+
+\textbf{Participant} & \textbf{Number of transitions} & \multicolumn{2}{c}{\textbf{Mean duration (seconds)}} & \multicolumn{2}{c}{\textbf{Total duration (seconds)}} \\
+
+\cmidrule(l){3-4} \cmidrule(l){5-6}
+
+ & & \textbf{RW} & \textbf{VR} & \textbf{RW} & \textbf{VR} \\
+
+\midrule
+
+14 & 18 & 17.368 & 2.889 & 330 & 52 \\
+
+15 & 15 & 14.656 & 3.233 & 234.5 & 48.5 \\
+
+16 & 26 & 8.352 & 5.538 & 225.5 & 144 \\
+
+17 & 15 & 5.013 & 1.2 & 80.2 & 18 \\
+
+\bottomrule
+\end{tabularx}
+\caption{Distribution of time spent in RW \& VR environments for all participants during 75/25 scenario.}
+\label{floob}
+\end{center}
+\end{table}
+
+
+
+
+\begin{table}
+\begin{center}
+\begin{tabularx}{\textwidth}{c *{6}{>{\centering\arraybackslash}X}}
+\toprule
+
+\textbf{Participant} & \textbf{Number of transitions} & \multicolumn{2}{c}{\textbf{Mean duration (seconds)}} & \multicolumn{2}{c}{\textbf{Total duration (seconds)}} \\
+
+\cmidrule(l){3-4} \cmidrule(l){5-6}
+
+ &  & \textbf{RW} & \textbf{VR} & \textbf{RW} & \textbf{VR} \\
+
+\midrule
+
+14 & 2 & 32.5 & \textless 1 & 97.55 & \textless 1 \\
+
+15 & 12 & 9.077 & 2.542 & 118 & 30.5 \\
+
+16 & 18 & 11.316 & 3.661 & 215 & 65.9 \\
+
+17 & 6 & 19.714 & 0.167 & 138 & \textless 1 \\
+
+\bottomrule
+\end{tabularx}
+\caption{Distribution of time spent in RW \& VR environments for all participants during 50/50 scenario.}
+\label{floob}
+\end{center}
+\end{table}
+
 
 %=========================================================================================================
 
