--- a/thesis.tex
+++ b/thesis.tex
@@ -56,6 +56,9 @@
 %to include external PDFs (eg appendices)
 \usepackage{pdfpages}
 
+%for toprule/midrule/bottomrule in tabularx environments
+\usepackage{booktabs}
+
 \let\oldFootnote\footnote
 \newcommand\nextToken\relax
 
