--- a/thesis.tex
+++ b/thesis.tex
@@ -56,7 +56,7 @@
 %to include external PDFs (eg appendices)
 \usepackage{pdfpages}
 
-%for toprule/midrule/bottomrule in tabularx environments
+%for toprule/midrule/bottomrule in tabularx environment
 \usepackage{booktabs}
 
 \let\oldFootnote\footnote
